src/styles/index.css
:root {
    --orange: #f68721;
    --white: #fcfcfc;
}

#doit-logo {
    height: 40px;
    width: auto;
}

body {
    background-color: var(--white);
}

p {
    font-family: Verdana;
    font-size: 14px;
}

#new-proj-btn {
    background-color: var(--orange);
    border: none;
    border-radius: 30px;
    color: var(--white);
    font-family: Verdana;
    font-size: 14px;
    padding: 17px 40px;
    text-align: center;
}

#new-proj-btn:hover {
    background-color: hsl(from var(--orange) h s calc(l - 15));
    cursor: pointer;
}

